# ph-backend

./: .dockerignore  .env.sample  alembic.ini  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
_compose/app/: Dockerfile  Dockerfile.prod
_compose/db/: Dockerfile
_compose/env/: app.sample
_compose/nginx/: Dockerfile  nginx.conf
_compose/scripts/: install-db-extensions  start-app  start-celery-workers  start-uvicorn
alembic/: env.py
alembic/versions/: 40d840334dc2_.py  487e7bafac9c_.py
apps/core/routers/: __init__.py  views.py
extensions/: app.py  database.py  redis.py
migrations/models/: 0_20230729130649_init.py
models/: __init__.py
models/account/: __init__.py  admin.py
project/settings/: __init__.py  base.py  database.py
src/: config.py  database.py  main.py
src/account/: models.py
src/extensions/: dependencies.py  models.py  redis.py
src/organization/: models.py  routers.py  serializers.py  services.py
src/organization/serializers/: __init__.py  base.py
src/reference/: models.py  routers.py  serializers.py  services.py
src/reference/serializers/: __init__.py  base.py
utils/api/: routers.py
