[tool.poetry]
name = "ph-backend"
version = "0.1.0"
description = ""
authors = ["Anatoly <anatolyfeteleu@gmail.com>"]
readme = "README.md"

[tool.poetry.group.production.dependencies]
sentry-sdk = "*"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.core.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
