[tool.poetry]
name = "ph-backend"
version = "0.1.0"
description = ""
authors = ["Anatoly <anatolyfeteleu@gmail.com>"]
readme = "README.md"

[tool.poetry.group.production.dependencies]
sentry-sdk = "*"

[tool.poetry.group.utils.dependencies]
pydantic = {extras = ["dotenv"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"


[tool.poetry.group.database.dependencies]
sqlalchemy = {extras = ["sqlalchemy"], version = "^2.0.19" }
asyncpg = "^0.28.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
greenlet = "^2.0.2"
aioredis = "^2.0.1"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.core.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.22.0"